refactor: AssessmentRunner accepts PolicySource; remove fetchPolicies and buildAdapterRegistry
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>